clusters/pk3s/windshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: windshift
  namespace: windshift
  labels:
    app: windshift
spec:
  selector:
    app: windshift
  ports:
    - name: http
      port: 8080
      targetPort: 8080
